--- a/Part2/index.html
+++ b/Part2/index.html
@@ -9,10 +9,14 @@
 <body>
   <header><h1>Poker Cards</h1></header>
     <main>
-        <section><span>A</span><span>♦</span><span>A</span></section>
-        <section><span>A</span><span>♣</span><span>A</span></section>
-        <section><span>A</span><span>♥</span><span>A</span></section>
-        <section><span>A</span><span>♠</span><span>A</span></section>
+        <section id="diamond"><span>A</span><span>♦</span><span>A</span></section>
+        <section id="club"><span>A</span><span>♣</span><span>A</span></section>
+        <section id="heart"><span>A</span><span>♥</span><span>A</span></section>
+        <section id="spade"><span>A</span><span>♠</span><span>A</span></section>
     </main>
+    <input id='idInput' type="text" placeholder="Set ID">
+    <input id='colorInput' type="text" placeholder="Set Color">
+    <button id=" tn" onclick="setCard()"></button>
 </body>
+<script src="./index.js"></script>
 </html>
