--- a/Part2/index.html
+++ b/Part2/index.html
@@ -16,7 +16,8 @@
     </main>
     <input id='idInput' type="text" placeholder="Set ID">
     <input id='colorInput' type="text" placeholder="Set Color">
-    <button id=" tn" onclick="setCard()"></button>
-</body>
+    <button id="btn" onclick="setCard()">Set Card</button>
+    <button id="btn" onclick="resetCard()">Reset Card</button>
+  </body>
 <script src="./index.js"></script>
 </html>
